// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`events/VenueDetails Snapshots Default 1`] = `
<div
  class="container"
>
  <div
    class="ff-venue_details v-card v-sheet theme--light"
  >
    <div
      class="v-card__title font-weight-bold"
    >
      
    Venue Details
  
    </div>
     
    <hr
      class="v-divider theme--light"
    />
     
    <div
      class="v-card__text"
    >
      <div
        class="layout align-center row wrap"
      >
        <div
          class="flex xs6 pr-2"
        >
          <div
            class="layout justify-content-between align-center mb-2 row"
          >
            <h4
              class="text-uppercase grey--text font-weight-bold"
            >
              
            Venue
          
            </h4>
             
            <!---->
          </div>
           
          <div
            class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder v-select v-autocomplete theme--light"
          >
            <div
              class="v-input__control"
            >
              <div
                class="v-input__slot"
              >
                <div
                  class="v-select__slot"
                >
                  <input
                    autocomplete="off"
                    placeholder="Search / Select Venue"
                    role="combobox"
                    type="text"
                  />
                  <div
                    class="v-input__append-inner"
                  >
                    <div
                      class="v-input__icon v-input__icon--append"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        arrow_drop_down
                      </i>
                    </div>
                  </div>
                </div>
                <div
                  class="v-menu"
                >
                  <div
                    class="v-menu__content theme--light v-autocomplete__content"
                    style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                  >
                    <div
                      class="v-select-list v-card theme--light"
                    >
                      <div
                        class="v-list theme--light"
                        role="list"
                      >
                        <div
                          role="listitem"
                        >
                          <div
                            class="v-list__tile theme--light"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                No data available
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="v-text-field__details"
              >
                <div
                  class="v-messages theme--light"
                >
                  <span
                    class="v-messages__wrapper"
                    name="message-transition"
                    tag="div"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <div
          class="flex xs6 pl-2"
        >
          <div
            class="layout justify-content-between align-center mb-2 row"
          >
            <h4
              class="text-uppercase grey--text font-weight-bold"
            >
              
            Location
          
            </h4>
             
            <!---->
          </div>
           
          <div
            class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder v-select v-autocomplete v-input--is-disabled theme--light"
          >
            <div
              class="v-input__control"
            >
              <div
                class="v-input__slot"
              >
                <div
                  class="v-select__slot"
                >
                  <input
                    autocomplete="off"
                    disabled="disabled"
                    placeholder="Search / Select Location"
                    role="combobox"
                    type="text"
                  />
                  <div
                    class="v-input__append-inner"
                  >
                    <div
                      class="v-input__icon v-input__icon--append"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon v-icon--disabled material-icons theme--light"
                      >
                        arrow_drop_down
                      </i>
                    </div>
                  </div>
                </div>
                <div
                  class="v-menu"
                >
                  <div
                    class="v-menu__content theme--light v-autocomplete__content"
                    style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                  >
                    <div
                      class="v-select-list v-card theme--light"
                    >
                      <div
                        class="v-list theme--light"
                        role="list"
                      >
                        <div
                          role="listitem"
                        >
                          <div
                            class="v-list__tile theme--light"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                No data available
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="v-text-field__details"
              >
                <div
                  class="v-messages theme--light"
                >
                  <span
                    class="v-messages__wrapper"
                    name="message-transition"
                    tag="div"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <div
          class="flex d-flex xs12 pb-3"
        >
          <h4
            class="text-uppercase grey--text font-weight-bold"
          >
            
          Address
        
          </h4>
           
          <span
            class="text-xs-center"
          >
            
          -
        
          </span>
        </div>
         
        <div
          class="flex xs12"
        >
          <hr
            class="v-divider theme--light"
          />
        </div>
         
        <div
          class="flex d-flex xs12 py-3"
        >
          <h4
            class="text-uppercase grey--text font-weight-bold"
          >
            
          Capacity
        
          </h4>
           
          <span
            class="text-xs-center"
          >
            
          -
        
          </span>
        </div>
         
        <div
          class="flex xs12"
        >
          <hr
            class="v-divider theme--light"
          />
        </div>
         
        <div
          class="flex d-flex xs12 py-3"
        >
          <h4
            class="text-uppercase grey--text font-weight-bold"
          >
            
          Spots
        
          </h4>
           
          <span
            class="text-xs-center"
          >
            
          -
        
          </span>
        </div>
         
        <div
          class="flex xs12"
        >
          <hr
            class="v-divider theme--light"
          />
        </div>
         
        <div
          class="flex xs12 py-3"
        >
          <h4
            class="pb-2 text-uppercase grey--text font-weight-bold"
          >
            
          Location details
        
          </h4>
           
          <p>
            
          
        
          </p>
           
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="v-card__actions"
    >
      <div
        class="layout align-center justify-space-around"
      >
        <div
          class="flex xs12 sm8 md6 lg4"
        >
          <button
            class="v-btn v-btn--block v-btn--disabled v-btn--depressed theme--light"
            disabled="disabled"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              
          Get Directions
        
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`events/VenueDetails Snapshots NotSelected 1`] = `
<div
  class="container"
>
  <div
    class="ff-venue_details v-card v-sheet theme--light"
  >
    <div
      class="v-card__title font-weight-bold"
    >
      
    Venue Details
  
    </div>
     
    <hr
      class="v-divider theme--light"
    />
     
    <div
      class="v-card__text"
    >
      <div
        class="layout align-center row wrap"
      >
        <div
          class="flex xs6 pr-2"
        >
          <div
            class="layout justify-content-between align-center mb-2 row"
          >
            <h4
              class="text-uppercase grey--text font-weight-bold"
            >
              
            Venue
          
            </h4>
             
            <!---->
          </div>
           
          <div
            class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder v-select v-autocomplete theme--light"
          >
            <div
              class="v-input__control"
            >
              <div
                class="v-input__slot"
              >
                <div
                  class="v-select__slot"
                >
                  <input
                    autocomplete="off"
                    placeholder="Search / Select Venue"
                    role="combobox"
                    type="text"
                  />
                  <div
                    class="v-input__append-inner"
                  >
                    <div
                      class="v-input__icon v-input__icon--append"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        arrow_drop_down
                      </i>
                    </div>
                  </div>
                </div>
                <div
                  class="v-menu"
                >
                  <div
                    class="v-menu__content theme--light v-autocomplete__content"
                    style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                  >
                    <div
                      class="v-select-list v-card theme--light"
                    >
                      <div
                        class="v-list theme--light"
                        role="list"
                      >
                        <div
                          role="listitem"
                        >
                          <a
                            class="v-list__tile v-list__tile--link theme--light"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                LA Stadium
                              </div>
                            </div>
                          </a>
                        </div>
                        <div
                          role="listitem"
                        >
                          <a
                            class="v-list__tile v-list__tile--link theme--light"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              />
                            </div>
                          </a>
                        </div>
                        <div
                          role="listitem"
                        >
                          <a
                            class="v-list__tile v-list__tile--link theme--light"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                ATL Stadium
                              </div>
                            </div>
                          </a>
                        </div>
                        <div
                          role="listitem"
                        >
                          <a
                            class="v-list__tile v-list__tile--link theme--light"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                ATL Stadium 2
                              </div>
                            </div>
                          </a>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="v-text-field__details"
              >
                <div
                  class="v-messages theme--light"
                >
                  <span
                    class="v-messages__wrapper"
                    name="message-transition"
                    tag="div"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <div
          class="flex xs6 pl-2"
        >
          <div
            class="layout justify-content-between align-center mb-2 row"
          >
            <h4
              class="text-uppercase grey--text font-weight-bold"
            >
              
            Location
          
            </h4>
             
            <!---->
          </div>
           
          <div
            class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder v-select v-autocomplete v-input--is-disabled theme--light"
          >
            <div
              class="v-input__control"
            >
              <div
                class="v-input__slot"
              >
                <div
                  class="v-select__slot"
                >
                  <input
                    autocomplete="off"
                    disabled="disabled"
                    placeholder="Search / Select Location"
                    role="combobox"
                    type="text"
                  />
                  <div
                    class="v-input__append-inner"
                  >
                    <div
                      class="v-input__icon v-input__icon--append"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon v-icon--disabled material-icons theme--light"
                      >
                        arrow_drop_down
                      </i>
                    </div>
                  </div>
                </div>
                <div
                  class="v-menu"
                >
                  <div
                    class="v-menu__content theme--light v-autocomplete__content"
                    style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                  >
                    <div
                      class="v-select-list v-card theme--light"
                    >
                      <div
                        class="v-list theme--light"
                        role="list"
                      >
                        <div
                          role="listitem"
                        >
                          <div
                            class="v-list__tile theme--light"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                No data available
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="v-text-field__details"
              >
                <div
                  class="v-messages theme--light"
                >
                  <span
                    class="v-messages__wrapper"
                    name="message-transition"
                    tag="div"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <div
          class="flex d-flex xs12 pb-3"
        >
          <h4
            class="text-uppercase grey--text font-weight-bold"
          >
            
          Address
        
          </h4>
           
          <span
            class="text-xs-center"
          >
            
          -
        
          </span>
        </div>
         
        <div
          class="flex xs12"
        >
          <hr
            class="v-divider theme--light"
          />
        </div>
         
        <div
          class="flex d-flex xs12 py-3"
        >
          <h4
            class="text-uppercase grey--text font-weight-bold"
          >
            
          Capacity
        
          </h4>
           
          <span
            class="text-xs-center"
          >
            
          -
        
          </span>
        </div>
         
        <div
          class="flex xs12"
        >
          <hr
            class="v-divider theme--light"
          />
        </div>
         
        <div
          class="flex d-flex xs12 py-3"
        >
          <h4
            class="text-uppercase grey--text font-weight-bold"
          >
            
          Spots
        
          </h4>
           
          <span
            class="text-xs-center"
          >
            
          -
        
          </span>
        </div>
         
        <div
          class="flex xs12"
        >
          <hr
            class="v-divider theme--light"
          />
        </div>
         
        <div
          class="flex xs12 py-3"
        >
          <h4
            class="pb-2 text-uppercase grey--text font-weight-bold"
          >
            
          Location details
        
          </h4>
           
          <p>
            
          
        
          </p>
           
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="v-card__actions"
    >
      <div
        class="layout align-center justify-space-around"
      >
        <div
          class="flex xs12 sm8 md6 lg4"
        >
          <button
            class="v-btn v-btn--block v-btn--disabled v-btn--depressed theme--light"
            disabled="disabled"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              
          Get Directions
        
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`events/VenueDetails Snapshots SelectedVenue 1`] = `
<div
  class="container"
>
  <div
    class="ff-venue_details v-card v-sheet theme--light"
  >
    <div
      class="v-card__title font-weight-bold"
    >
      
    Venue Details
  
    </div>
     
    <hr
      class="v-divider theme--light"
    />
     
    <div
      class="v-card__text"
    >
      <div
        class="layout align-center row wrap"
      >
        <div
          class="flex xs6 pr-2"
        >
          <div
            class="layout justify-content-between align-center mb-2 row"
          >
            <h4
              class="text-uppercase grey--text font-weight-bold"
            >
              
            Venue
          
            </h4>
             
            <button
              class="mr-0 v-btn v-btn--flat v-btn--icon theme--light"
              type="button"
            >
              <div
                class="v-btn__content"
              >
                <i
                  aria-hidden="true"
                  class="v-icon clear-button-icon fa fa fa fa-times theme--light"
                />
              </div>
            </button>
          </div>
           
          <div
            class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder v-select v-autocomplete v-input--is-label-active v-input--is-dirty theme--light"
          >
            <div
              class="v-input__control"
            >
              <div
                class="v-input__slot"
              >
                <div
                  class="v-select__slot"
                >
                  <input
                    autocomplete="off"
                    placeholder="Search / Select Venue"
                    role="combobox"
                    type="text"
                  />
                  <div
                    class="v-input__append-inner"
                  >
                    <div
                      class="v-input__icon v-input__icon--append"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        arrow_drop_down
                      </i>
                    </div>
                  </div>
                </div>
                <div
                  class="v-menu"
                >
                  <div
                    class="v-menu__content theme--light v-autocomplete__content"
                    style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                  >
                    <div
                      class="v-select-list v-card theme--light"
                    >
                      <div
                        class="v-list theme--light"
                        role="list"
                      >
                        <div
                          class="primary--text"
                          role="listitem"
                        >
                          <a
                            class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                LA Stadium
                              </div>
                            </div>
                          </a>
                        </div>
                        <div
                          role="listitem"
                        >
                          <a
                            class="v-list__tile v-list__tile--link theme--light"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              />
                            </div>
                          </a>
                        </div>
                        <div
                          role="listitem"
                        >
                          <a
                            class="v-list__tile v-list__tile--link theme--light"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                ATL Stadium
                              </div>
                            </div>
                          </a>
                        </div>
                        <div
                          role="listitem"
                        >
                          <a
                            class="v-list__tile v-list__tile--link theme--light"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                ATL Stadium 2
                              </div>
                            </div>
                          </a>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="v-text-field__details"
              >
                <div
                  class="v-messages theme--light"
                >
                  <span
                    class="v-messages__wrapper"
                    name="message-transition"
                    tag="div"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <div
          class="flex xs6 pl-2"
        >
          <div
            class="layout justify-content-between align-center mb-2 row"
          >
            <h4
              class="text-uppercase grey--text font-weight-bold"
            >
              
            Location
          
            </h4>
             
            <!---->
          </div>
           
          <div
            class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder v-select v-autocomplete theme--light"
          >
            <div
              class="v-input__control"
            >
              <div
                class="v-input__slot"
              >
                <div
                  class="v-select__slot"
                >
                  <input
                    autocomplete="off"
                    placeholder="Search / Select Location"
                    role="combobox"
                    type="text"
                  />
                  <div
                    class="v-input__append-inner"
                  >
                    <div
                      class="v-input__icon v-input__icon--append"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        arrow_drop_down
                      </i>
                    </div>
                  </div>
                </div>
                <div
                  class="v-menu"
                >
                  <div
                    class="v-menu__content theme--light v-autocomplete__content"
                    style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                  >
                    <div
                      class="v-select-list v-card theme--light"
                    >
                      <div
                        class="v-list theme--light"
                        role="list"
                      >
                        <div
                          role="listitem"
                        >
                          <a
                            class="v-list__tile v-list__tile--link theme--light"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                North Velmaville
                              </div>
                            </div>
                          </a>
                        </div>
                        <div
                          role="listitem"
                        >
                          <a
                            class="v-list__tile v-list__tile--link theme--light"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                Lake Mitchellchester
                              </div>
                            </div>
                          </a>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="v-text-field__details"
              >
                <div
                  class="v-messages theme--light"
                >
                  <span
                    class="v-messages__wrapper"
                    name="message-transition"
                    tag="div"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <div
          class="flex d-flex xs12 pb-3"
        >
          <h4
            class="text-uppercase grey--text font-weight-bold"
          >
            
          Address
        
          </h4>
           
          <p
            class="grey--text text-xs-right"
          >
            
          381 Jade Rest Suite 601 45753, Okuneva Heights Suite 101
        
          </p>
        </div>
         
        <div
          class="flex xs12"
        >
          <hr
            class="v-divider theme--light"
          />
        </div>
         
        <div
          class="flex d-flex xs12 py-3"
        >
          <h4
            class="text-uppercase grey--text font-weight-bold"
          >
            
          Capacity
        
          </h4>
           
          <span
            class="text-xs-center"
          >
            
          -
        
          </span>
        </div>
         
        <div
          class="flex xs12"
        >
          <hr
            class="v-divider theme--light"
          />
        </div>
         
        <div
          class="flex d-flex xs12 py-3"
        >
          <h4
            class="text-uppercase grey--text font-weight-bold"
          >
            
          Spots
        
          </h4>
           
          <span
            class="text-xs-center"
          >
            
          -
        
          </span>
        </div>
         
        <div
          class="flex xs12"
        >
          <hr
            class="v-divider theme--light"
          />
        </div>
         
        <div
          class="flex xs12 py-3"
        >
          <h4
            class="pb-2 text-uppercase grey--text font-weight-bold"
          >
            
          Location details
        
          </h4>
           
          <p>
            
          
        
          </p>
           
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="v-card__actions"
    >
      <div
        class="layout align-center justify-space-around"
      >
        <div
          class="flex xs12 sm8 md6 lg4"
        >
          <button
            class="v-btn v-btn--block v-btn--disabled v-btn--depressed theme--light"
            disabled="disabled"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              
          Get Directions
        
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`events/VenueDetails Snapshots SelectedVenueAndLocation 1`] = `
<div
  class="container"
>
  <div
    class="ff-venue_details v-card v-sheet theme--light"
  >
    <div
      class="v-card__title font-weight-bold"
    >
      
    Venue Details
  
    </div>
     
    <hr
      class="v-divider theme--light"
    />
     
    <div
      class="v-card__text"
    >
      <div
        class="layout align-center row wrap"
      >
        <div
          class="flex xs6 pr-2"
        >
          <div
            class="layout justify-content-between align-center mb-2 row"
          >
            <h4
              class="text-uppercase grey--text font-weight-bold"
            >
              
            Venue
          
            </h4>
             
            <button
              class="mr-0 v-btn v-btn--flat v-btn--icon theme--light"
              type="button"
            >
              <div
                class="v-btn__content"
              >
                <i
                  aria-hidden="true"
                  class="v-icon clear-button-icon fa fa fa fa-times theme--light"
                />
              </div>
            </button>
          </div>
           
          <div
            class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder v-select v-autocomplete v-input--is-label-active v-input--is-dirty theme--light"
          >
            <div
              class="v-input__control"
            >
              <div
                class="v-input__slot"
              >
                <div
                  class="v-select__slot"
                >
                  <input
                    autocomplete="off"
                    placeholder="Search / Select Venue"
                    role="combobox"
                    type="text"
                  />
                  <div
                    class="v-input__append-inner"
                  >
                    <div
                      class="v-input__icon v-input__icon--append"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        arrow_drop_down
                      </i>
                    </div>
                  </div>
                </div>
                <div
                  class="v-menu"
                >
                  <div
                    class="v-menu__content theme--light v-autocomplete__content"
                    style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                  >
                    <div
                      class="v-select-list v-card theme--light"
                    >
                      <div
                        class="v-list theme--light"
                        role="list"
                      >
                        <div
                          class="primary--text"
                          role="listitem"
                        >
                          <a
                            class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                LA Stadium
                              </div>
                            </div>
                          </a>
                        </div>
                        <div
                          role="listitem"
                        >
                          <a
                            class="v-list__tile v-list__tile--link theme--light"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              />
                            </div>
                          </a>
                        </div>
                        <div
                          role="listitem"
                        >
                          <a
                            class="v-list__tile v-list__tile--link theme--light"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                ATL Stadium
                              </div>
                            </div>
                          </a>
                        </div>
                        <div
                          role="listitem"
                        >
                          <a
                            class="v-list__tile v-list__tile--link theme--light"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                ATL Stadium 2
                              </div>
                            </div>
                          </a>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="v-text-field__details"
              >
                <div
                  class="v-messages theme--light"
                >
                  <span
                    class="v-messages__wrapper"
                    name="message-transition"
                    tag="div"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <div
          class="flex xs6 pl-2"
        >
          <div
            class="layout justify-content-between align-center mb-2 row"
          >
            <h4
              class="text-uppercase grey--text font-weight-bold"
            >
              
            Location
          
            </h4>
             
            <button
              class="mr-0 v-btn v-btn--flat v-btn--icon theme--light"
              type="button"
            >
              <div
                class="v-btn__content"
              >
                <i
                  aria-hidden="true"
                  class="v-icon clear-button-icon fa fa fa fa-times theme--light"
                />
              </div>
            </button>
          </div>
           
          <div
            class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder v-select v-autocomplete v-input--is-label-active v-input--is-dirty theme--light"
          >
            <div
              class="v-input__control"
            >
              <div
                class="v-input__slot"
              >
                <div
                  class="v-select__slot"
                >
                  <input
                    autocomplete="off"
                    placeholder="Search / Select Location"
                    role="combobox"
                    type="text"
                  />
                  <div
                    class="v-input__append-inner"
                  >
                    <div
                      class="v-input__icon v-input__icon--append"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        arrow_drop_down
                      </i>
                    </div>
                  </div>
                </div>
                <div
                  class="v-menu"
                >
                  <div
                    class="v-menu__content theme--light v-autocomplete__content"
                    style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                  >
                    <div
                      class="v-select-list v-card theme--light"
                    >
                      <div
                        class="v-list theme--light"
                        role="list"
                      >
                        <div
                          class="primary--text"
                          role="listitem"
                        >
                          <a
                            class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                North Velmaville
                              </div>
                            </div>
                          </a>
                        </div>
                        <div
                          role="listitem"
                        >
                          <a
                            class="v-list__tile v-list__tile--link theme--light"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                Lake Mitchellchester
                              </div>
                            </div>
                          </a>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="v-text-field__details"
              >
                <div
                  class="v-messages theme--light"
                >
                  <span
                    class="v-messages__wrapper"
                    name="message-transition"
                    tag="div"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <div
          class="flex d-flex xs12 pb-3"
        >
          <h4
            class="text-uppercase grey--text font-weight-bold"
          >
            
          Address
        
          </h4>
           
          <p
            class="grey--text text-xs-right"
          >
            
          381 Jade Rest Suite 601 45753, Okuneva Heights Suite 101
        
          </p>
        </div>
         
        <div
          class="flex xs12"
        >
          <hr
            class="v-divider theme--light"
          />
        </div>
         
        <div
          class="flex d-flex xs12 py-3"
        >
          <h4
            class="text-uppercase grey--text font-weight-bold"
          >
            
          Capacity
        
          </h4>
           
          <p
            class="grey--text text-xs-right"
          >
            
          300 People
        
          </p>
        </div>
         
        <div
          class="flex xs12"
        >
          <hr
            class="v-divider theme--light"
          />
        </div>
         
        <div
          class="flex d-flex xs12 py-3"
        >
          <h4
            class="text-uppercase grey--text font-weight-bold"
          >
            
          Spots
        
          </h4>
           
          <p
            class="grey--text text-xs-right"
          >
            
          30
        
          </p>
        </div>
         
        <div
          class="flex xs12"
        >
          <hr
            class="v-divider theme--light"
          />
        </div>
         
        <div
          class="flex xs12 py-3"
        >
          <h4
            class="pb-2 text-uppercase grey--text font-weight-bold"
          >
            
          Location details
        
          </h4>
           
          <p>
            
          Lorem North Velmaville dolor sit amet, consectetur adipiscing elit. Nam interdum sagittis nibh sed accumsan. Etiam a mauris eget turpis maximus fermentum. Suspendisse eu condimentum
        
          </p>
           
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="v-card__actions"
    >
      <div
        class="layout align-center justify-space-around"
      >
        <div
          class="flex xs12 sm8 md6 lg4"
        >
          <button
            class="v-btn v-btn--block v-btn--disabled v-btn--depressed theme--light"
            disabled="disabled"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              
          Get Directions
        
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
